# static_contact

./: Cargo.toml  LICENSE  README.md
configuration/: config.toml  static_contact.service
src/: config.rs  email.rs  form.rs  main.rs
